--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jwt-decode": "^2.2.0",
     "mobile-detect": "^1.4.3",
     "react": "^16.8.4",
     "react-device-detect": "^1.6.2",
