--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,24 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Rumah hijau",
+  "name": "RumahHijau.com",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/image/rumah-hijau.jpg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpg"
+    },
+    {
+      "src": "/image/rumah-hijau.jpg",
+      "sizes": "192x192",
+      "type": "image/jpg"
+    },
+    {
+      "src": "/image/rumah-hijau.jpg",
+      "sizes": "512x512",
+      "type": "image/jpg"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
